--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 QtRays is a fun little Qt-based ray tracer. I'm working on this very slowly.
 
-Developing this on Mac OS X 10.7 (Lion) against Qt 4.8.1. It should build on any OS supported by that version of Qt.
+Developing this on Mac OS X 10.8 (Mountain Lion) against Qt 4.8.1. It should build on any OS supported by that version of Qt.
 
 Also tested on Ubuntu 12.04 x64 with Qt 4.8.1.
 
